tests/error/type_errors/and_not_bool_left.err
Guppy compilation failed. Error in file $FILE:12

10:    @module
11:    def foo(x: NonBool, y: bool) -> bool:
12:        return x and y
                  ^
GuppyTypeError: Expression of type `NonBool` cannot be interpreted as a `bool`
